--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.html
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.html
@@ -185,6 +185,10 @@
           <div class="stat-label">Teams</div>
         </div>
         
+        <div class="stat-card">
+          <div class="stat-value">{{ numberOfMentors }}</div>
+          <div class="stat-label">Mentors</div>
+        </div>
       </div>
   
       <!-- Prizes Section -->
