--- a/src/app/demo/components/landing/Hackathon/mentor-details-dialog/mentor-details-dialog.component.html
+++ b/src/app/demo/components/landing/Hackathon/mentor-details-dialog/mentor-details-dialog.component.html
@@ -41,10 +41,10 @@
       </div>
     
       <!-- Evaluation Button -->
-      <div class="mentor-actions" *ngIf="!showEvaluationForm">
-        <button pButton 
-                label="Evaluate Mentor" 
-                icon="pi pi-star" 
+      <div class="mentor-actions" *ngIf="!showEvaluationForm && hasParticipated">
+        <button pButton
+                label="Evaluate Mentor"
+                icon="pi pi-star"
                 class="p-button-primary"
                 (click)="toggleEvaluationForm()">
         </button>
