--- a/src/app/demo/components/landing/navbar/navbar.component.html
+++ b/src/app/demo/components/landing/navbar/navbar.component.html
@@ -62,6 +62,11 @@
                 </a>
             </li>
             <li>
+                <a [routerLink]="['/team-chat-hub']" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                    <span>Team Chat Hub</span>
+                </a>
+            </li>
+            <li>
                 <a (click)="router.navigate(['/landing/team-submission'])" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                     <span>Team Submission</span>
                 </a>
